--- a/consentimientos-service/src/main/resources/templates/index.html
+++ b/consentimientos-service/src/main/resources/templates/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/form-styles.css">
+    <link rel="stylesheet" href="../static/css/form-styles.css">
 </head>
 <body>
 <div class="topnav">
   <a class="active" href="/" th:text="#{navbar.home}">Home</a>
   <a href="/consentimientos/facultativo" th:text="#{navbar.practitioner}">Practitioner</a>
   <a href="/consentimientos/paciente/pendientes" th:text="#{navbar.patient}">Patient</a>
+  <a href="/questionnaire" th:text="Questionnaire">Questionnaire</a>
   <a href="/logout" th:text="#{navbar.logout}">Logout</a>
 </div>
 <div class="container">
