--- a/consentimientos-service/src/main/resources/templates/navbar.html
+++ b/consentimientos-service/src/main/resources/templates/navbar.html
@@ -8,10 +8,7 @@
 <body>
 
 <div class="topnav">
-  <a class="active" href="/" th:text="#{navbar.home}">Home</a>
-  <a href="/consentimientos/facultativo" th:text="#{navbar.practitioner}">Practitioner</a>
-  <a href="/consentimientos/paciente/pendientes" th:text="#{navbar.patient}">Patient</a>
-  <a href="/logout" th:text="#{navbar.logout}">Logout</a>
+  <a class="active" href="/questionnaire" th:text="#{navbar.questionnaire}"/>
 </div>
 </body>
 </html>
