Fix migracion q2form

--- a/consentimientos-service/src/main/resources/templates/navbar.html
+++ b/consentimientos-service/src/main/resources/templates/navbar.html
@@ -8,7 +8,11 @@
 <body>
 
 <div class="topnav">
-  <a class="active" href="/questionnaire" th:text="#{navbar.questionnaire}"/>
+  <a href="/" onclick="setActive(this)" th:text="#{navbar.home}">Home</a>
+  <a href="/consentimientos/facultativo" onclick="setActive(this)" th:text="#{navbar.practitioner}">Practitioner</a>
+  <a href="/consentimientos/paciente/pendientes" onclick="setActive(this)" th:text="#{navbar.patient}">Patient</a>
+  <a class="active" href="/questionnaire" onclick="setActive(this)" th:text="#{navbar.questionnaire}"/>
+  <a href="/logout" onclick="setActive(this)" th:text="#{navbar.logout}">Logout</a>
 </div>
 </body>
 </html>
