--- a/consentimientos-service/src/main/resources/templates/questionnaireForm.html
+++ b/consentimientos-service/src/main/resources/templates/questionnaireForm.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title th:text="${questionnaire.title}"></title>
-	<link rel="stylesheet" href="../static/css/form-styles.css">
+	<link rel="stylesheet" href="/css/form-styles.css">
 </head>
 
 <body>
