--- a/consentimientos-service/src/main/resources/templates/index.html
+++ b/consentimientos-service/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../static/css/form-styles.css">
+    <link rel="stylesheet" href="/css/form-styles.css">
 </head>
 <body>
 <div class="topnav">
