--- a/consentimientos-service/src/main/resources/templates/fragments/codingFragment.html
+++ b/consentimientos-service/src/main/resources/templates/fragments/codingFragment.html
@@ -1,3 +1,4 @@
+<!-- Autor: Marco Antonio Maldonado Orozco -->
 <!--Pregunta con respuesta/s de tipo coding (Hay más anotaciones dentro del mismo código)
 	1. La pregunta tiene una sola respuesta
 		1.1 La pregunta tiene 3 o menos respuestas posibles
