--- a/consentimientos-service/src/main/resources/templates/fragments/referenceFragment.html
+++ b/consentimientos-service/src/main/resources/templates/fragments/referenceFragment.html
@@ -1,3 +1,4 @@
+<!-- Autor: Marco Antonio Maldonado Orozco -->
 <!-- Fragment para representar las preguntas de tipo referencia
 		1. Vienen las opciones posibles en el answerOption:
 			En este caso se crea un select de respuesta única o múltiple según el atributo repeats y se tendrá que seleccionar una de las
