--- a/consentimientos-service/src/main/resources/templates/fragments/textFragment.html
+++ b/consentimientos-service/src/main/resources/templates/fragments/textFragment.html
@@ -1,3 +1,4 @@
+<!-- Autor: Marco Antonio Maldonado Orozco -->
 <div th:fragment="text">
 	<label th:id="${item.linkId}" th:text="${item.text}" class="question-title"/>
 	 <!-- Este contenedor es para identificar donde se insertarán los inputs, su nombres es linkId de la pregunta + -tipo_de_input + -container -->
