--- a/consentimientos-service/src/main/resources/templates/itemsTypes.html
+++ b/consentimientos-service/src/main/resources/templates/itemsTypes.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>Questionnaire item types</title>
 	<link rel="stylesheet" href="../static/form-styles.css">
+	<!-- Autor: Marco Antonio Maldonado Orozco -->
 </head>
 
 <body>
