--- a/consentimientos-service/src/main/resources/templates/paginaDeError.html
+++ b/consentimientos-service/src/main/resources/templates/paginaDeError.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Ha ocurrido un error</title>
+    <!-- Autor: Marco Antonio Maldonado Orozco -->
 </head>
 <body>
     <h2>No se ha podido obtener el formulario requerido</h2>
