--- a/consentimientos-service/src/main/resources/templates/paginaDeExito.html
+++ b/consentimientos-service/src/main/resources/templates/paginaDeExito.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Formulario Enviado con Éxito</title>
+    <!-- Autor: Marco Antonio Maldonado Orozco -->
 </head>
 <body>
     <h2>¡Formulario enviado con éxito!</h2>
