--- a/consentimientos-service/src/main/resources/templates/questionnaireForm.html
+++ b/consentimientos-service/src/main/resources/templates/questionnaireForm.html
@@ -6,6 +6,7 @@
 	<meta charset="UTF-8">
 	<title th:text="${questionnaire.title}"></title>
 	<link rel="stylesheet" href="/css/form-styles.css">
+	<!-- Autor: Marco Antonio Maldonado Orozco -->
 </head>
 
 <body>
