--- a/consentimientos-service/src/main/resources/templates/fragments/booleanFragment.html
+++ b/consentimientos-service/src/main/resources/templates/fragments/booleanFragment.html
@@ -1,3 +1,4 @@
+<!-- Autor: Marco Antonio Maldonado Orozco -->
 <div th:fragment="boolean">
 	<div class="boolean-question">	
 		<!-- La label es para englobar el checkbox y el texto y el check se marque también cuando se clica el texto-->		
