--- a/consentimientos-service/src/main/resources/templates/fragments/stringFragment.html
+++ b/consentimientos-service/src/main/resources/templates/fragments/stringFragment.html
@@ -1,3 +1,4 @@
+<!-- Autor: Marco Antonio Maldonado Orozco -->
 <div th:fragment="string">
 	<label for="${item.LinkId}" th:text=${item.Text} class="question-title"/>
 	 <!-- Este contenedor es para identificar donde se insertarán los inputs, su nombres es linkId de la pregunta + -tipo_de_input + -container -->
