Accion completar tarea

--- a/consentimientos-service/src/main/resources/static/css/allTasks-styles.css
+++ b/consentimientos-service/src/main/resources/static/css/allTasks-styles.css
@@ -39,3 +39,39 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+.floating-alert-success {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    width: 80%;
+    max-width: 500px;
+    padding: 30px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    display: none;
+    background-color: rgb(71, 171, 97);
+    color: white;
+    border: 1px solid rgb(62, 149, 84);
+}
+        
+.floating-alert-error {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    width: 80%;
+    max-width: 500px;
+    padding: 30px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    display: none;
+	background-color: rgb(238, 64, 68);
+    color: white;
+    border: 1px solid rgb(236, 40, 46);
+}
