--- a/consentimientos-service/src/main/resources/templates/potentialTasks.html
+++ b/consentimientos-service/src/main/resources/templates/potentialTasks.html
@@ -9,12 +9,13 @@
 <body>
 	<script th:src="@{/js/taskActions.js}"></script>
    <div class="header">
-        <button class="back-button" onclick="window.location.href='/tasks/tasks'" th:text="#{back}"></button>
+        <button class="back-button" onclick="window.location.href='/tasks'" th:text="#{back}"></button>
     	<h1 th:text="#{tasks.potentialTasks}"></h1>
     </div>
     <table>
         <thead>
             <tr>
+				<th th:text="#{tasks.processId}"></th>
                 <th th:text="#{tasks.name}"></th>
                 <th th:text="#{tasks.creationDate}"></th>
                 <th th:text="#{tasks.actions}"></th>
@@ -22,12 +23,14 @@
         </thead>
         <tbody>
             <tr th:each="task : ${tasks}">
+				<td th:text="${task.processId}"></td>
                 <td th:text="${task.name}"></td>
                 <td th:text="${#dates.format(task.createdOn, 'yyyy/MM/dd HH:mm:ss')}"></td>
                 <td class="actions">
                     <form method="post" action="/tasks/claim">
                         <input type="hidden" name="taskId" th:value="${task.id}">
                         <input type="hidden" name="containerId" th:value="${task.containerId}">
+                        <input type="hidden" name="processInstanceId" th:value="${task.processInstanceId}">
                         <button type="submit" th:text="#{tasks.claim}"></button>
                     </form>
                 </td>
