--- a/consentimientos-service/src/main/resources/templates/navbar.html
+++ b/consentimientos-service/src/main/resources/templates/navbar.html
@@ -12,7 +12,7 @@
   <a href="/consentimientos/facultativo" onclick="setActive(this)" th:text="#{navbar.practitioner}">Practitioner</a>
   <a href="/consentimientos/paciente/pendientes" onclick="setActive(this)" th:text="#{navbar.patient}">Patient</a>
   <a class="active" href="/questionnaire" onclick="setActive(this)" th:text="#{navbar.questionnaire}"/>
-  <a href="/tasks/allTasks" onclick="setActive(this)" th:text="#{navbar.tasks}"/>
+  <a href="/tasks" onclick="setActive(this)" th:text="#{navbar.tasks}"/>
   <a href="/logout" onclick="setActive(this)" th:text="#{navbar.logout}">Logout</a>
 </div>
 </body>
