Preparando primer lanzamiento

--- a/human-tasks-service/src/main/resources/templates/itemsTypes.html
+++ b/human-tasks-service/src/main/resources/templates/itemsTypes.html
@@ -1,3 +1,22 @@
+<!--
+
+*  This file is part of Healthcare Tasks: Human task management in healthcare contexts.
+*  Copyright (C) 2024  Universidad de Sevilla/Departamento de Ingeniería Telemática
+*
+*  Healthcare Tasks is free software: you can redistribute it and/or
+*  modify it under the terms of the GNU General Public License as published
+*  by the Free Software Foundation, either version 3 of the License, or (at
+*  your option) any later version.
+*
+*  Healthcare Tasks is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
+*  Public License for more details.
+*
+*  You should have received a copy of the GNU General Public License along
+*  with Healthcare Tasks. If not, see <https://www.gnu.org/licenses/>.
+
+-->
 <!DOCTYPE html>
 <html>
 
