--- a/human-tasks-service/src/main/resources/templates/fragments/dateFragment.html
+++ b/human-tasks-service/src/main/resources/templates/fragments/dateFragment.html
@@ -19,7 +19,7 @@
 -->
 <!-- Autor: Marco Antonio Maldonado Orozco -->
 <div th:fragment="date">
-  <label th:text="${item.text}" class="question-title"/>
+  <label th:text="${item.text} + (${item.required} ? ' *' : '')" class="question-title"/>
   <!-- Este contenedor es para identificar donde se insertarán los inputs, su nombres es linkId de la pregunta + -tipo_de_input + -container -->
   <div th:id="${item.linkId + '~date-container'}">  
   	<input type="date" th:id="${item.linkId}" th:name="${item.linkId + '~date'}" th:required="${item.required}" />
