--- a/human-tasks-service/src/main/resources/templates/fragments/stringFragment.html
+++ b/human-tasks-service/src/main/resources/templates/fragments/stringFragment.html
@@ -19,7 +19,7 @@
 -->
 <!-- Autor: Marco Antonio Maldonado Orozco -->
 <div th:fragment="string">
-	<label for="${item.LinkId}" th:text=${item.Text} class="question-title"/>
+	<label for="${item.LinkId}" th:text="${item.Text} + (${item.required} ? ' *' : '')" class="question-title"/>
 	 <!-- Este contenedor es para identificar donde se insertarán los inputs, su nombres es linkId de la pregunta + -tipo_de_input + -container -->
 	<div th:id="${item.linkId + '~text-container'}">  
 		<input type="text" th:id="${item.LinkId}" th:name="${item.LinkId + '~string'}" th:required="${item.required}" th:readonly="${item.readOnly}">
