--- a/human-tasks-service/src/main/resources/templates/fragments/quantityIntegerAndDecimalFragment.html
+++ b/human-tasks-service/src/main/resources/templates/fragments/quantityIntegerAndDecimalFragment.html
@@ -19,7 +19,7 @@
 -->
 <!-- Autor: Marco Antonio Maldonado Orozco -->
 <div th:fragment="quantityIntegerAndDecimal" class="quantity-container">
-    <label th:text="${item.text}" class="question-title"/>
+    <label th:text="${item.text} + (${item.required} ? ' *' : '')" class="question-title"/>
     <!-- Este contenedor es para identificar donde se insertarán los inputs, su nombres es linkId de la pregunta + -tipo_de_input + -container -->
     <div  th:id="${item.linkId + '~number-container'}">	
 		<!-- Según el tipo de input se calcula el step y se muestra la label-->		
