--- a/human-tasks-service/src/main/resources/templates/fragments/textFragment.html
+++ b/human-tasks-service/src/main/resources/templates/fragments/textFragment.html
@@ -19,7 +19,7 @@
 -->
 <!-- Autor: Marco Antonio Maldonado Orozco -->
 <div th:fragment="text">
-	<label th:id="${item.linkId}" th:text="${item.text}" class="question-title"/>
+	<label th:id="${item.linkId}" th:text="${item.text} + (${item.required} ? ' *' : '')" class="question-title"/>
 	 <!-- Este contenedor es para identificar donde se insertarán los inputs, su nombres es linkId de la pregunta + -tipo_de_input + -container -->
 	<div  th:id="${item.linkId + '~textarea-container'}">  
 		<label th:required="${item.required}">
